src/snapshots/cronexpr__parser__tests__crontab_guru_examples-16.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 */4 * * * UTC\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            0,
        },
    },
    hours: PossibleLiterals {
        values: {
            0,
            4,
            8,
            12,
            16,
            20,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
        },
    },
    days_of_month: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
            27,
            28,
            29,
            30,
            31,
        },
    },
    days_of_week: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
    },
    timezone: TimeZone(
        "UTC",
    ),
}
